--- a/my-app/src/scss/components/_base.scss
+++ b/my-app/src/scss/components/_base.scss
@@ -2,6 +2,7 @@ body {
   display: flex;
   justify-content:center;
   align-items:center;
+  flex-direction: column;
 
   //background-image: url(../../public/assets/background.jpg)
 
