--- a/my-app/src/scss/components/_base.scss
+++ b/my-app/src/scss/components/_base.scss
@@ -69,16 +69,16 @@ body {
 
         .searchBtn {
           border: 1px solid red;
-          width: 5rem;
-          height: 5rem;
+          width: 50px;
+          height: 50px;
           margin: 0 0.5rem 2rem 0;
 
         }
 
         .favBtn {
           border: 1px solid red;
-          width: 5rem;
-          height: 5rem;
+          width: 50px;
+          height: 50px;
           margin: 0 0.5rem 2rem 0;
         }
 
