--- a/my-app/src/scss/components/_base.scss
+++ b/my-app/src/scss/components/_base.scss
@@ -4,14 +4,12 @@ body {
   align-items: center;
   flex-direction: column;
 
-  width: 2500px;
+  width: 100%;
   height: 100vh;
 
 
   .windowApp {
-    border: 1px solid red;
-
-    width: 80vw;
+    width: 1400px;
     height: 55vh;
     display: flex;
     background-position: center;
@@ -19,12 +17,12 @@ body {
 
 
     .leftColumn {
-      border: 1px solid red;
+
       width: 70%;
 
       .mapSection {
         height: 65%;
-        border: 1px solid red;
+
 
         display: flex;
         align-items: center;
@@ -33,23 +31,24 @@ body {
         #map {
           height: 80%;
           width: 80%;
-          border: 1px solid red;
+
         }
       }
 
       .tipSection {
         height: 35%;
-        border: 1px solid red;
+
 
         display: flex;
         align-items: center;
         justify-content: center;
 
         .tipBox {
-          width: 20rem;
-          height: 12rem;
+          width: 400px;
+          height: 200px;
           margin: 5rem;
-          border: 1px solid red;
+
+
         }
 
       }
@@ -58,45 +57,70 @@ body {
 
     .rightColumn {
       width: 30%;
-      border: 1px solid red;
+
 
       .btnSection {
-        border: 1px solid red;
+
         display: flex;
         justify-content: flex-end;
         align-items: flex-start;
         height: 10%;
+        margin-top: 2px;
 
         .searchBtn {
-          border: 1px solid red;
-          width: 50px;
-          height: 50px;
+          width: 65px;
+          height: 65px;
           margin: 0 0.5rem 2rem 0;
+          background-repeat: no-repeat;
+          background-size: cover;
 
         }
 
         .favBtn {
-          border: 1px solid red;
-          width: 50px;
-          height: 50px;
+          width: 65px;
+          height: 65px;
           margin: 0 0.5rem 2rem 0;
+          background-size: cover;
+          background-repeat: no-repeat;
         }
 
       }
 
       .mainSection {
-        border: 3px solid green;
         display: flex;
         flex-direction: column;
 
         width: 100%;
         height: 90%;
 
+        border-radius: 30px;
+
+        -webkit-box-shadow: -10px -9px 24px -7px rgba(102, 215, 233, 1);
+        -moz-box-shadow: -10px -9px 24px -7px rgba(102, 215, 233, 1);
+        box-shadow: -10px -9px 24px -7px rgba(102, 215, 233, 1);
+        background-color: rgba(255, 255, 255, 0.88);
+
+        .addToFav {
+          height: 40px;
+          width: 40px;
+          padding: 0;
+          margin-top: 15px;
+          margin-right: 15px;
+
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center;
+          display: block;
+          align-self: end;
+
+        }
 
         .icon {
           border: 1px solid red;
           height: 10%;
           width: 100%;
+
+
         }
 
         .infoContent {
@@ -106,9 +130,14 @@ body {
         }
 
         .infoBox {
-          border: 1px solid red;
           height: 60%;
           width: 100%;
+
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: 90%;
+
+
         }
 
 
