--- a/my-app/src/scss/components/_mapBox.scss
+++ b/my-app/src/scss/components/_mapBox.scss
@@ -1,4 +1,11 @@
 #map{
   height: 40vh;
   width: 60vw;
+
+  border-radius: 30px;
+
+  -webkit-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
+  -moz-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
+  box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
+  background-color: rgba(255, 255, 255, 0.88);
 }
