--- a/my-app/src/scss/components/_tipBox.scss
+++ b/my-app/src/scss/components/_tipBox.scss
@@ -1,23 +1,32 @@
 .tipBox {
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 
+  border-radius: 30px;
 
-  .icon{
-    border: 1px solid yellow;
+  -webkit-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
+  -moz-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
+  box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
+  background-color: rgba(255, 255, 255, 0.88);
+
+  .icon {
+
     height: 50%;
-width: 100%;
+    width: 100px;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+
   }
 
-  .tipText{
-    border: 1px solid yellow;
+  .tipText {
+
     height: 50%;
     width: 100%;
 
   }
-
 
 
 }
