added animation for text

--- a/my-app/src/scss/components/_base.scss
+++ b/my-app/src/scss/components/_base.scss
@@ -124,9 +124,19 @@ body {
         }
 
         .infoContent {
-          border: 1px solid red;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin: 3rem;
+          color: #0e8d63;
+          font-size:3rem;
+          line-height: 1.5;
+          font-family: 'Rubik Moonrocks', cursive;
+
           height: 40%;
           width: 100%;
+
+          animation: flicker 2s infinite;
         }
 
         .infoBox {
@@ -150,4 +160,20 @@ body {
   }
 
 
+}
+
+@keyframes flicker {
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+    text-shadow: 0 0 4px #fff,
+    0 0 11px #fff,
+    0 0 19px #fff,
+    0 0 40px #0fa,
+    0 0 80px #e8b859,
+    0 0 90px #0fa,
+    0 0 100px #0fa,
+    0 0 150px #0fa;
+  }
+  20%, 24%, 55% {
+    text-shadow: none;
+  }
 }
