--- a/my-app/src/scss/components/_base.scss
+++ b/my-app/src/scss/components/_base.scss
@@ -127,8 +127,7 @@ body {
           display: flex;
           justify-content: center;
           align-items: center;
-          margin: 3rem;
-          color: #0e8d63;
+          color: #e82c50;
           font-size:3rem;
           line-height: 1.5;
           font-family: 'Rubik Moonrocks', cursive;
@@ -136,7 +135,7 @@ body {
           height: 40%;
           width: 100%;
 
-          animation: flicker 2s infinite;
+          animation: flickerRed 2s infinite;
         }
 
         .infoBox {
@@ -162,16 +161,32 @@ body {
 
 }
 
-@keyframes flicker {
+@keyframes flickerGreen {
   0%, 18%, 22%, 25%, 53%, 57%, 100% {
     text-shadow: 0 0 4px #fff,
     0 0 11px #fff,
     0 0 19px #fff,
     0 0 40px #0fa,
-    0 0 80px #e8b859,
+    0 0 80px #0fa,
     0 0 90px #0fa,
     0 0 100px #0fa,
     0 0 150px #0fa;
+  }
+  20%, 24%, 55% {
+    text-shadow: none;
+  }
+}
+
+@keyframes flickerRed {
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+    text-shadow: 0 0 4px #fff,
+    0 0 11px #fff,
+    0 0 19px #fff,
+    0 0 40px #fc728c,
+    0 0 80px #fc728c,
+    0 0 90px #fc728c,
+    0 0 100px #fc728c,
+    0 0 150px #fc728c;
   }
   20%, 24%, 55% {
     text-shadow: none;
