added map from mapbox

--- a/my-app/src/scss/_custom.scss
+++ b/my-app/src/scss/_custom.scss
@@ -1,6 +1,6 @@
 @import "./components/base";
 @import "./components/mapBox";
-@import "./components/tipBox";
+@import "components/tipSection";
 
 @import "./reset";
 @import "./variables";
