--- a/my-app/src/scss/components/_mapBox.scss
+++ b/my-app/src/scss/components/_mapBox.scss
@@ -1,4 +1,4 @@
-#map{
+#map {
   height: 40vh;
   width: 60vw;
 
@@ -8,4 +8,25 @@
   -moz-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
   box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
   background-color: rgba(255, 255, 255, 0.88);
-}
+
+
+
+
+
+.markerBtn {
+  height: 40px;
+  width: 40px;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+
+  background-position: center;
+  background-size: cover;
+
+
+  &:hover {
+    height: 80px;
+    width: 80px;
+
+  }
+}}
