--- a/my-app/src/scss/components/_base.scss
+++ b/my-app/src/scss/components/_base.scss
@@ -75,6 +75,7 @@ body {
           background-repeat: no-repeat;
           background-size: cover;
           cursor: pointer;
+          z-index: 10;
 
           &:hover {
             width: 70px;
@@ -93,6 +94,8 @@ body {
           background-repeat: no-repeat;
           cursor: pointer;
 
+          z-index: 10;
+
           &:hover {
             width: 70px;
             height: 70px;
@@ -106,6 +109,8 @@ body {
       .mainSection {
         display: flex;
         flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
 
         width: 100%;
         height: 90%;
@@ -117,12 +122,17 @@ body {
         box-shadow: -10px -9px 24px -7px rgba(102, 215, 233, 1);
         background-color: rgba(255, 255, 255, 0.88);
 
+        position: relative;
+        //z-index: 1;
+
         .addToFav {
           height: 40px;
           width: 40px;
           padding: 0;
           margin-top: 15px;
           margin-right: 15px;
+          position: absolute;
+          top: 0;
 
           background-size: contain;
           background-repeat: no-repeat;
@@ -132,6 +142,7 @@ body {
           cursor: pointer;
 
           &:hover {
+
             animation: rotate 2s infinite;
           }
 
@@ -139,9 +150,33 @@ body {
 
         .icon {
           border: 1px solid red;
-          height: 10%;
-          width: 100%;
+          height: 180px;
+          width: 180px;
+          margin-left: 2rem;
 
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+
+          animation: hithere 3s ease infinite;
+
+        }
+
+        .iconSearch {
+
+          height: 180px;
+          width: 180px;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+          transform: rotateY(180deg);
+          margin-left: 2rem;
+          cursor: pointer;
+          backface-visibility: visible !important;
+          animation: rotateSearch 3s linear infinite;
+          //&:hover{
+          //  animation: flip 2s ease infinite;
+          //}
 
         }
 
@@ -149,7 +184,7 @@ body {
           display: flex;
           justify-content: center;
           align-items: center;
-          color: #e82c50;
+          color: #15d326;
           font-size: 3rem;
           line-height: 1.5;
           font-family: 'Rubik Moonrocks', cursive;
@@ -160,9 +195,11 @@ body {
           animation: flickerGreen 2s infinite;
         }
 
+
         .infoBox {
-          height: 60%;
+          height: 350px;
           width: 100%;
+          margin-bottom: 10px;
 
           background-repeat: no-repeat;
           background-position: center;
@@ -199,21 +236,6 @@ body {
   }
 }
 
-@keyframes flickerRed {
-  0%, 18%, 22%, 25%, 53%, 57%, 100% {
-    text-shadow: 0 0 4px #fff,
-    0 0 11px #fff,
-    0 0 19px #fff,
-    0 0 40px #fc728c,
-    0 0 80px #fc728c,
-    0 0 90px #fc728c,
-    0 0 100px #fc728c,
-    0 0 150px #fc728c;
-  }
-  20%, 24%, 55% {
-    text-shadow: none;
-  }
-}
 
 @keyframes rotate {
   0% {
@@ -235,5 +257,66 @@ body {
   100% {
     -webkit-transform: rotate3d(0, 0, 1, 360deg);
     transform: rotate3d(0, 0, 1, 360deg);
+  }
+}
+
+@keyframes rotateSearch {
+  0% {
+    transform: rotateY(0) scale(1);
+    animation-timing-function: ease-out;
+  }
+  40% {
+    transform: translateZ(150px) rotateY(170deg);
+    animation-timing-function: ease-out;
+  }
+  70% {
+    transform: translateZ(150px) rotateY(190deg) scale(1);
+    animation-timing-function: ease-in;
+  }
+  100% {
+    transform: rotateY(360deg) scale(1);
+    animation-timing-function: ease-in;
+  }
+
+}
+
+@keyframes flip {
+  0% {
+    transform: perspective(900px) rotateY(0);
+    animation-timing-function: ease-out;
+  }
+  40% {
+    transform: perspective(900px) translateZ(150px) rotateY(170deg);
+    animation-timing-function: ease-out;
+  }
+  50% {
+    transform: perspective(900px) translateZ(150px) rotateY(190deg) scale(1);
+    animation-timing-function: ease-in;
+  }
+  80% {
+    transform: perspective(900px) rotateY(360deg) scale(.95);
+    animation-timing-function: ease-in;
+  }
+  100% {
+    transform: perspective(900px) scale(1);
+    animation-timing-function: ease-in;
+  }
+}
+
+@keyframes hithere {
+  30% {
+    transform: scale(1.2);
+  }
+  40%, 60% {
+    transform: rotate(-20deg) scale(1.2);
+  }
+  50% {
+    transform: rotate(20deg) scale(1.2);
+  }
+  70% {
+    transform: rotate(0deg) scale(1.2);
+  }
+  100% {
+    transform: scale(1);
   }
 }
