--- a/my-app/src/scss/components/_mapBox.scss
+++ b/my-app/src/scss/components/_mapBox.scss
@@ -2,6 +2,7 @@
   height: 40vh;
   width: 60vw;
 
+
   border-radius: 30px;
 
   -webkit-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
@@ -10,23 +11,21 @@
   background-color: rgba(255, 255, 255, 0.88);
 
 
+  .markerBtn {
+    height: 40px;
+    width: 40px;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+
+    background-position: center;
+    background-size: cover;
 
 
+    &:hover {
+      height: 80px;
+      width: 80px;
 
-.markerBtn {
-  height: 40px;
-  width: 40px;
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
-
-  background-position: center;
-  background-size: cover;
-
-
-  &:hover {
-    height: 80px;
-    width: 80px;
-
+    }
   }
-}}
+}
