--- a/my-app/src/scss/components/_mapBox.scss
+++ b/my-app/src/scss/components/_mapBox.scss
@@ -1,31 +1,37 @@
-#map {
-  height: 40vh;
-  width: 60vw;
-
+.mapdiv {
+  height: 36vh;
+  width: 51vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
 
   border-radius: 30px;
-
   -webkit-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
   -moz-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
   box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
   background-color: rgba(255, 255, 255, 0.88);
 
 
-  .markerBtn {
-    height: 40px;
-    width: 40px;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-
-    background-position: center;
-    background-size: cover;
 
 
-    &:hover {
-      height: 80px;
-      width: 80px;
+    .markerBtn {
+      height: 40px;
+      width: 40px;
+      padding: 0;
+      margin: 0;
+      cursor: pointer;
 
+      background-position: center;
+      background-size: cover;
+
+
+      &:hover {
+        height: 80px;
+        width: 80px;
+
+      }
     }
-  }
+
+
 }
