--- a/my-app/src/scss/components/_tipSection.scss
+++ b/my-app/src/scss/components/_tipSection.scss
@@ -13,9 +13,9 @@
 
   .icon {
 
-    height: 55%;
+    height: 60%;
     width: 100px;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
 
 
@@ -30,58 +30,58 @@
 
 }
 
-.addToFavBox{
-  border-radius: 30px;
-
-  -webkit-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
-  -moz-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
-  box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
-  background-color: rgba(255, 255, 255, 0.88);
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  .favRow{
-    height: 30%;
-    width: 95%;
-    border: 1px solid red;
-
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-
-
-    .addToFav {
-      height: 40px;
-      width: 40px;
-      margin: 5px;
-
-
-
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      display: block;
-      align-self: end;
-      cursor: pointer;
-
-      &:hover {
-
-        animation: rotate 2s infinite;
-      }
-
-    }
-
-    .favName{
-      color: rgba(245, 46, 84, 0.82);
-      font-size: 1.8rem;
-      line-height: 1.5;
-      font-family: 'Rubik Moonrocks', cursive;
-
-    }
-
-  }
-
-}
+//.addToFavBox{
+//  border-radius: 30px;
+//
+//  -webkit-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
+//  -moz-box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
+//  box-shadow: 12px 16px 24px -7px rgba(102, 215, 233, 1);
+//  background-color: rgba(255, 255, 255, 0.88);
+//
+//  display: flex;
+//  flex-direction: column;
+//  justify-content: center;
+//  align-items: center;
+//
+//  .favRow{
+//    height: 30%;
+//    width: 95%;
+//    border: 1px solid red;
+//
+//    display: flex;
+//    justify-content: flex-start;
+//    align-items: center;
+//
+//
+//    .addToFav {
+//      height: 40px;
+//      width: 40px;
+//      margin: 5px;
+//
+//
+//
+//      background-size: contain;
+//      background-repeat: no-repeat;
+//      background-position: center;
+//      display: block;
+//      align-self: end;
+//      cursor: pointer;
+//
+//      &:hover {
+//
+//        animation: rotate 2s infinite;
+//      }
+//
+//    }
+//
+//    .favName{
+//      color: rgba(245, 46, 84, 0.82);
+//      font-size: 1.8rem;
+//      line-height: 1.5;
+//      font-family: 'Rubik Moonrocks', cursive;
+//
+//    }
+//
+//  }
+//
+//}
