--- a/my-app/src/scss/_custom.scss
+++ b/my-app/src/scss/_custom.scss
@@ -1,7 +1,6 @@
+@import "./reset";
 @import "./components/base";
 @import "./components/mapBox";
-@import "components/tipSection";
+@import "components/addToFav";
 
-@import "./reset";
-@import "./variables";
 
